vendor/zerocopy/tests/ui-msrv/transmute-src-not-intobytes.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: IntoBytes` is not satisfied
  --> tests/ui-msrv/transmute-src-not-intobytes.rs:17:32
   |
17 | const SRC_NOT_AS_BYTES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `NotZerocopy<AU16>`
   |
note: required by a bound in `SRC_NOT_AS_BYTES::transmute`
  --> tests/ui-msrv/transmute-src-not-intobytes.rs:17:32
   |
17 | const SRC_NOT_AS_BYTES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                |
   |                                required by a bound in this
   |                                required by this bound in `SRC_NOT_AS_BYTES::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
